--- a/templates/index.html
+++ b/templates/index.html
@@ -26,10 +26,12 @@
   <!-- Main Section -->
   <main>
     <h2 class="section-title">🔥 Trending Movies</h2>
-    <div class="movie-carousel">
+    <div id="movie-container" class="movie-carousel">
       {% for movie in movies %}
         <div class="movie-card">
-          <img src="https://image.tmdb.org/t/p/w300{{ movie.poster_path }}" alt="{{ movie.title }}">
+          <a href="/movie/{{ movie.id }}">
+            <img src="https://image.tmdb.org/t/p/w300{{ movie.poster_path }}" alt="{{ movie.title }}">
+          </a>
           <div class="movie-info">
             <h3>{{ movie.title }}</h3>
             <p>⭐ {{ movie.vote_average }}</p>
@@ -37,8 +39,12 @@
         </div>
       {% endfor %}
     </div>
+    <div id="loading" class="loading">Loading more movies...</div>
   </main>
 
+  <script>
+    const TMDB_API_KEY = "{{ TMDB_API_KEY }}"; // Passed from Flask
+  </script>
   <script src="/static/js/script.js"></script>
 </body>
 </html>
