--- a/templates/movie.html
+++ b/templates/movie.html
@@ -8,11 +8,16 @@
 </head>
 <body>
   <header>
-    <h1>{{ movie.title }}</h1>
-    <p>⭐ Rating: {{ movie.vote_average }}</p>
+    <h1>{{ movie.title or "Movie Details" }}</h1>
+    {% if movie.vote_average %}
+      <p>⭐ Rating: {{ movie.vote_average }}</p>
+    {% endif %}
   </header>
 
   <main>
+    {% if error_message %}
+      <p class="error-message">{{ error_message }}</p>
+    {% endif %}
     {% if trailer_key %}
       <iframe width="560" height="315" src="https://www.youtube.com/embed/{{ trailer_key }}" frameborder="0" allowfullscreen></iframe>
     {% else %}
@@ -20,7 +25,7 @@
     {% endif %}
 
     <h2>Overview</h2>
-    <p>{{ movie.overview }}</p>
+    <p>{{ movie.overview or "No overview available." }}</p>
 
     <h2>Reviews</h2>
     {% if movie.reviews.results %}
